--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,10 +5,8 @@
 <title>Insert title here</title>
 </head>
 <body>
-Hello world!
-<%
-	String name="hong";
-%>
-	<h1>[<%name%>]bbg</h1>
+<form action="hello.jsp">  
+<input type="text" name="uname">  
+<input type="submit" value="go"><br/>  
 </body>
 </html>
