--- a/WebContent/index3.html
+++ b/WebContent/index3.html
@@ -5,16 +5,9 @@
 <title>Insert title here</title>
 </head>
 <body>
-<h3>goto hello.jsp</h3>
-<form action="hello.jsp">  
+<form action="welcome.jsp">  
 <input type="text" name="uname">  
 <input type="submit" value="go"><br/>  
-<hr>
-</form>
-
-
-
-
-
+</form>  
 </body>
 </html>
