--- a/WebContent/day11(JSP2)/directiveElement.html
+++ b/WebContent/day11(JSP2)/directiveElement.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h3>goto hello.jsp</h3>
-<form action="hello.jsp">  
+<form action="directiveElement.jsp">  
 <input type="submit" value="go"><br/>  
 <hr>
 </form>
